After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 793322 - universal-access: Fix possible crash when exiting panel
universal-access: Fix possible crash when exiting panel
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Universal Access
unspecified
Other All
: Normal normal
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2018-02-09 02:09 UTC by Bastien Nocera
Modified: 2018-02-09 16:02 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
universal-access: Fix possible crash when exiting panel (1.17 KB, patch)
2018-02-09 02:09 UTC, Bastien Nocera
committed Details | Review

Description Bastien Nocera 2018-02-09 02:09:33 UTC
.
Comment 1 Bastien Nocera 2018-02-09 02:09:37 UTC
Created attachment 368170 [details] [review]
universal-access: Fix possible crash when exiting panel

The gnome-settings-daemon mouse settings (double-click delay) and repeat
keys settings were both missing destroying their GSettings, meaning that
we could crash if the setting changed outside the panel, or when coming
and going to the panel.
Comment 2 Bastien Nocera 2018-02-09 16:02:23 UTC
Attachment 368170 [details] pushed as 6c3daea - universal-access: Fix possible crash when exiting panel