universal-access: Fix possible crash when exiting panel

The gnome-settings-daemon mouse settings (double-click delay) and repeat
keys settings were both missing destroying their GSettings, meaning that
we could crash if the setting changed outside the panel, or when coming
and going to the panel.

https://bugzilla.gnome.org/show_bug.cgi?id=793322